--- a/roles/common/tasks/packages.yml
+++ b/roles/common/tasks/packages.yml
@@ -1,20 +1,20 @@
 ---
 - name: Update apt cache
-  apt:
-    update_cache: yes
+  ansible.builtin.apt:
+    update_cache: true
     cache_valid_time: 3600
 
 - name: Install system packages
-  apt:
+  ansible.builtin.apt:
     name: "{{ common_packages.system }}"
-    state: latest
+    state: present
 
 - name: Install monitoring packages
-  apt:
+  ansible.builtin.apt:
     name: "{{ common_packages.monitoring }}"
-    state: latest
+    state: present
 
 - name: Install security packages
-  apt:
+  ansible.builtin.apt:
     name: "{{ common_packages.security }}"
-    state: latest
+    state: present
