--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 - name: Include package management tasks
-  include_tasks: packages.yml
+  ansible.builtin.include_tasks: packages.yml
   tags: ['common', 'packages']
 
 - name: Include system configuration tasks
-  include_tasks: system.yml
+  ansible.builtin.include_tasks: system.yml
   tags: ['common', 'system']
 
 - name: Include user management tasks
-  include_tasks: users.yml
+  ansible.builtin.include_tasks: users.yml
   tags: ['common', 'users']
