--- a/roles/security/tasks/fail2ban.yml
+++ b/roles/security/tasks/fail2ban.yml
@@ -1,22 +1,22 @@
 ---
 - name: Install required packages
-  apt:
+  ansible.builtin.apt:
     name:
       - fail2ban
       - rsyslog
     state: present
 
 - name: Ensure required services are started and enabled
-  service:
+  ansible.builtin.service:
     name: "{{ item }}"
     state: started
-    enabled: yes
+    enabled: true
   loop:
     - fail2ban
     - rsyslog
 
 - name: Copy jail.local configuration
-  copy:
+  ansible.builtin.copy:
     src: fail2ban/jail.local
     dest: /etc/fail2ban/jail.local
     owner: root
@@ -24,6 +24,6 @@
     mode: '0644'
 
 - name: Validate fail2ban configuration
-  command: fail2ban-client -t
+  ansible.builtin.command: fail2ban-client -t
   changed_when: false
   notify: Restart fail2ban
