feat: Add support for Ubuntu

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 
 ### Ansible ###
 *.retry
+inventory/hosts
+inventory/group_vars/all.yml
 
 ### macOS ###
 # General
@@ -38,12 +40,7 @@ Temporary Items
 *.icloud
 
 ### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+.vscode/
 
 # Local History for Visual Studio Code
 .history/
