--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -10,14 +10,25 @@
     state: present
     update_cache: true
 
+- name: Create Docker GPG directory
+  ansible.builtin.file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: '0755'
+
 - name: Add Docker GPG key
-  ansible.builtin.apt_key:
-    url: https://download.docker.com/linux/debian/gpg
-    state: present
+  ansible.builtin.get_url:
+    url: https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }}/gpg
+    dest: /etc/apt/keyrings/docker.asc
+    mode: '0644'
 
 - name: Add Docker repository
   ansible.builtin.apt_repository:
-    repo: "deb [arch=amd64] https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable"
+    repo: >-
+      deb [arch={{ [ansible_architecture] | map('extract', deb_architecture) | first }}
+      signed-by=/etc/apt/keyrings/docker.asc]
+      https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }}
+      {{ ansible_distribution_release }} stable
     state: present
 
 - name: Install Docker
