--- a/roles/common/tasks/packages.yml
+++ b/roles/common/tasks/packages.yml
@@ -2,6 +2,7 @@
 - name: Update apt cache
   ansible.builtin.apt:
     update_cache: true
+    upgrade: true
     cache_valid_time: 3600
 
 - name: Install system packages
