--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -25,7 +25,7 @@
 - name: Add Docker repository
   ansible.builtin.apt_repository:
     repo: >-
-      deb [arch={{ [ansible_architecture] | map('extract', deb_architecture) | first }}
+      deb [arch={{ [ansible_architecture] | map('extract', docker_deb_architecture) | first }}
       signed-by=/etc/apt/keyrings/docker.asc]
       https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }}
       {{ ansible_distribution_release }} stable
